# zebrafish_behavior_analysis

./: .gitignore  README.md  想定ファイル構造.txt
config/: experiment_config.yaml  model_params.yaml
data/processed/: zebrafish_features_processed_sample.csv
results/XGBoost/XGBoost_tw5_ss3_2025-06-17_15_54_29_results/: XGBoost_experiment_config.csv
results/XGBoost/XGBoost_tw5_ss3_2025-06-17_15_58_35_results/: XGBoost_experiment_config.csv
results/XGBoost/XGBoost_tw5_ss3_2025-06-17_16_00_46_results/: XGBoost_experiment_config.csv
results/XGBoost/XGBoost_tw5_ss3_2025-06-17_16_03_14_results/: XGBoost_experiment_config.csv
results/XGBoost/XGBoost_tw5_ss3_2025-06-17_16_03_55_results/: XGBoost_experiment_config.csv  XGBoost_parameter_grid_config.csv
results/XGBoost/XGBoost_tw5_ss3_2025-06-17_16_04_04_results/: XGBoost_experiment_config.csv
results/XGBoost/XGBoost_zebrafish_features_processed_sample_results/trial_1_repeat_1/: XGBoost_final_model.json
src/: .gitignore  Makefile  pyproject.toml  train.py
src/trainers/: XGBoostOptimizer.py  kfold_trainer.py
src/trainers/No_Use/: XGBoostOptimizer.py
src/utils/: config_loader.py  result_saver.py
src/visualization/: test.pu
test/: train_onefile.py  tses.py
