[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zebrafish_behavior_analysis"
version = "0.0.1"
description = "analysis"
authors = [
  { name = "Kozono shingo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["zebrafish_behavior_analysis"]
include = ["pyproject.toml", "zebrafish_behavior_analysis/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["zebrafish_behavior_analysis"]
force-sort-within-sections = true

